--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.2.1",
+    "@nestjs/platform-ws": "^8.2.1",
+    "@nestjs/websockets": "^8.2.1",
+    "ip-trace": "^0.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ws": "^7.5.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
