--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "update build file": "git subtree push --prefix build/ origin gh-pages"
+    "update-build-file": "git subtree push --prefix build/ origin gh-pages",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
