--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.2.1",
     "@nestjs/platform-ws": "^8.2.1",
     "@nestjs/websockets": "^8.2.1",
+    "@types/nodemailer": "^6.4.4",
     "ip-trace": "^0.1.0",
+    "joi": "^17.4.2",
+    "nodemailer": "^6.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
