--- a/.envTemplate
+++ b/.envTemplate
@@ -7,3 +7,14 @@ EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_USER=
 EMAIL_PASSWORD=
+
+# IP_STACK_API(https://ipstack.com/)
+IP_STACK_API_KEY=
+
+# IP_API(https://ip-api.com/)
+IP_API_KEY=
+
+# WHOIS_API(https://xn--c79as89aj0e29b77z.xn--3e0b707e/kor/whois/whois.jsp)
+WHOIS_API_KEY=
+
+
