--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.4.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.0.0",
@@ -29,6 +30,7 @@
     "@nestjs/platform-ws": "^8.2.1",
     "@nestjs/websockets": "^8.2.1",
     "@types/nodemailer": "^6.4.4",
+    "bull": "^3.29.3",
     "ip-trace": "^0.1.0",
     "joi": "^17.4.2",
     "nodemailer": "^6.7.1",
@@ -41,6 +43,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bull": "^3.15.7",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
