--- a/.envTemplate
+++ b/.envTemplate
@@ -17,4 +17,8 @@ IP_API_KEY=
 # WHOIS_API(https://xn--c79as89aj0e29b77z.xn--3e0b707e/kor/whois/whois.jsp)
 WHOIS_API_KEY=
 
+# Redis
+REDIS_PORT=
+REDIS_HOST=
+
 
