--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.2.1",
     "@nestjs/platform-ws": "^8.2.1",
+    "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.1",
     "@types/nodemailer": "^6.4.4",
     "bull": "^3.29.3",
@@ -38,6 +39,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.2.41",
     "ws": "^7.5.5"
   },
   "devDependencies": {
