--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ip-address": "^8.1.0",
     "ip-trace": "^0.1.0",
     "joi": "^17.4.2",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
