--- a/.envTemplate
+++ b/.envTemplate
@@ -14,8 +14,12 @@ IP_STACK_API_KEY=
 # IP_API(https://ipapi.com/)
 IP_API_KEY=
 
+# deprecated
 # WHOIS_API(https://xn--c79as89aj0e29b77z.xn--3e0b707e/kor/whois/whois.jsp)
 WHOIS_API_KEY=
+
+# IP_GEOLOCATION_API(https://app.ipgeolocation.io/)
+IP_GEOLOCATION_API=
 
 # Redis
 REDIS_PORT=
