--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.2.1",
     "@nestjs/platform-ws": "^8.2.1",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.1",
     "@types/nodemailer": "^6.4.4",
+    "axios": "^0.24.0",
     "bull": "^3.29.3",
     "ip-address": "^8.1.0",
     "ip-trace": "^0.1.0",
@@ -49,6 +51,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bull": "^3.15.7",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
