--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "ts-node seed/index.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^0.0.3",
@@ -35,6 +36,7 @@
     "@types/nodemailer": "^6.4.4",
     "axios": "^0.24.0",
     "bull": "^3.29.3",
+    "dotenv": "^10.0.0",
     "ip-address": "^8.1.0",
     "ip-trace": "^0.1.0",
     "joi": "^17.4.2",
