--- a/front/package.json
+++ b/front/package.json
@@ -14,11 +14,13 @@
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "axios": "^0.24.0",
+    "classnames": "^2.3.1",
     "dot-map-renderer": "^0.0.9",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "node-sass": "^6.0.1",
     "prettier": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
