--- a/backend/package.json
+++ b/backend/package.json
@@ -22,17 +22,17 @@
     "seed": "ts-node seed/index.ts"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.0.3",
-    "@nestjs/bull": "^0.4.2",
-    "@nestjs/common": "^8.2.4",
-    "@nestjs/config": "^1.1.5",
-    "@nestjs/core": "^8.2.4",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/platform-socket.io": "^8.2.1",
-    "@nestjs/platform-ws": "^8.2.1",
-    "@nestjs/schedule": "^1.0.2",
-    "@nestjs/typeorm": "^8.0.2",
-    "@nestjs/websockets": "^8.2.1",
+    "@nestjs/axios": "^0.1.0",
+    "@nestjs/common": "^9.0.3",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.3",
+    "@nestjs/platform-express": "^9.0.3",
+    "@nestjs/platform-socket.io": "^9.0.3",
+    "@nestjs/platform-ws": "^9.0.3",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/swagger": "^6.0.4",
+    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/websockets": "^9.0.3",
     "@types/nodemailer": "^6.4.4",
     "axios": "^0.24.0",
     "bull": "^3.29.3",
@@ -45,13 +45,14 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.41",
+    "swagger-ui-express": "^4.5.0",
+    "typeorm": "^0.3.0",
     "ws": "^7.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.2.4",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.1",
+    "@nestjs/testing": "^9.0.3",
     "@types/bull": "^3.15.7",
     "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
