--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@dot-map-renderer/app": "^0.0.11",
+    "@dot-map-renderer/app": "^0.0.12",
+    "@dot-map-renderer/component": "^0.0.12",
+    "@dot-map-renderer/react": "^0.0.12",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -24,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-use-animation-state": "^0.1.0",
     "recoil": "^0.5.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
