--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
     "node-sass": "^6.0.1",
     "prettier": "^2.6.0",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-use-animation-state": "^0.1.1",
@@ -67,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-color": "^3.0.6",
     "@types/styled-components": "^5.1.15",
     "gh-pages": "^3.2.3"
   }
