--- a/front/package.json
+++ b/front/package.json
@@ -42,9 +42,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "update-build-file": "git subtree push --prefix build/ origin gh-pages",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "eslint:fix": "eslint --fix",
     "prettier": "prettier --write ./src"
   },
@@ -68,7 +66,6 @@
   },
   "devDependencies": {
     "@types/react-color": "^3.0.6",
-    "@types/styled-components": "^5.1.15",
-    "gh-pages": "^3.2.3"
+    "@types/styled-components": "^5.1.15"
   }
 }
